solc_ossfuzz_seed_corpus/test_sol/test_00bc798434ddb6efb5a82e24841f0edb4ebea90400aa0f3095c0a82538c6f2e3_45da614b4ba6f0bb15ac3f93cd5d01a887060af5_sol.sol
==== Source:  ====

==== Source: su0.sol ====
function f0(bool i0)  returns(function () external o0,function () external o1,bytes26 o2)
{
  if (false)
  { }



  {

    if (true)
    { }



    if (false)
    { }
  }
  if (false)
  { }

  o0 = o1;
  if (false)
  {
  }
}

==== Source: su1.sol ====
function f1(bytes10 i0) 
{
  if (true)
  { }


  ((25300715008956851697746357201534671344047 + 3530416370949166227148204115299936913405) * 17639057432174300131065329807451474548286);

}
// ----
// TypeError 3757: (su1.sol:49-181): Invalid rational number.
